# euisuk-chung.github.io

./: .gitignore  404.html  README.md  _config.yml  about.html  ads.txt  archive.html  contact.html  faq.html  index.html  offline.html  privacy.html  processed_posts.csv  robots.txt  sitemap.xml  terms.html
.github/workflows/: velog-sync.yml
_includes/: ads.html  adsense.html  comments.html  footer.html  friends.html  head.html  intro-header.html  multilingual-sel.html  sns-links.html
_includes/about/: en.md  kr.md  zh.md
_layouts/: default.html  keynote.html  page.html  post.html
_posts/2021/: 2021-04-01-code-review.md  2021-04-02-code-review.md  2021-06-06-[딥러닝][개념정리] Inductive Bias란_.md  2021-07-26-[글또 6기] 글쓰는 개발자 모임에 참가하게 되었습니다!.md  2021-08-15-[Paper Review] Transferring Inductive Bias Through Knowledge Distillation - (1_3).md  2021-08-27-[Paper Review] Transferring Inductive Bias Through Knowledge Distillation - (2_3).md  2021-09-08-[Paper Review] Visualizing Data using t-SNE.md  2021-09-11-[개념] CPU, GPU, 그리고 GPU 원리.md  2021-09-13-[Paper Review] Transferring Inductive Bias Through Knowledge Distillation - (3_3).md  2021-09-14-[파이토치] 파이토치 기초 요소 (텐서편).md  2021-09-15-[꿀팁] Velog 글씨를 내 마음대로 바꿔보자! (색상, 형광펜) 🔆.md  2021-09-16-[파이토치] 파이토치 기초 요소 (Autograd란).md  2021-09-20-[머신러닝][차원축소] 변수 선택법.md  2021-09-21-[머신러닝][차원축소] 변수 추출법 - Principal Component Analysis (PCA).md  2021-10-09-[머신러닝][시계열] AR, MA, ARMA, ARIMA의 모든 것 - 개념편.md  2021-10-24-[알고리즘] 그래프.md  (+10 more)
_scripts/: blog_crawler.py  config.json  pyproject.toml  sync_posts.py
css/: hux-blog.min.css
js/: hux-blog.min.js
(+273 files in other folders)
